// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image Renders the UI snapshot correctly 1`] = `
<div
  className="css-0"
>
  <img
    alt=""
    className="css-0"
    onError={[Function]}
    src="test.png"
  />
</div>
`;

exports[`Image Renders the UI snapshot correctly 2`] = `
<div
  className="css-0"
>
  <figure
    className="css-0"
  >
    <img
      alt=""
      className="css-0"
      onError={[Function]}
      src="test.png"
    />
    <figcaption
      className="css-0"
    >
      <div
        aria-atomic={false}
        className="css-1xdhyk6"
        data-isinvalid={false}
      >
        <div
          className="css-0"
          dangerouslySetInnerHTML={
            {
              "__html": "Caption",
            }
          }
        />
      </div>
    </figcaption>
  </figure>
</div>
`;

exports[`Image Renders the UI snapshot correctly 3`] = `
<div
  className="css-0"
>
  <figure
    className="css-0"
  >
    <img
      alt=""
      className="css-0"
      onError={[Function]}
      src="test.png"
    />
    <figcaption
      className="css-0"
    >
      <div
        aria-atomic={false}
        className="css-1xdhyk6"
        data-isinvalid={false}
      >
        <div
          className="css-0"
          dangerouslySetInnerHTML={
            {
              "__html": "Credit",
            }
          }
        />
      </div>
    </figcaption>
  </figure>
</div>
`;

exports[`Image Renders the UI snapshot correctly 4`] = `
<div
  className="css-0"
>
  <figure
    className="css-0"
  >
    <img
      alt=""
      className="css-0"
      onError={[Function]}
      src="test.png"
    />
    <figcaption
      className="css-0"
    >
      <div
        aria-atomic={false}
        className="css-1xdhyk6"
        data-isinvalid={false}
      >
        <div
          className="css-0"
          dangerouslySetInnerHTML={
            {
              "__html": "Caption",
            }
          }
        />
      </div>
      <div
        aria-atomic={false}
        className="css-1xdhyk6"
        data-isinvalid={false}
      >
        <div
          className="css-0"
          dangerouslySetInnerHTML={
            {
              "__html": "Credit",
            }
          }
        />
      </div>
    </figcaption>
  </figure>
</div>
`;

exports[`Image Renders the UI snapshot correctly 5`] = `
<div
  className="css-0"
>
  <img
    alt=""
    className="css-0"
    onError={[Function]}
    src="test.png"
  />
</div>
`;

exports[`Image Renders the UI snapshot correctly 6`] = `
<div
  className="css-0"
>
  <img
    alt=""
    className="css-0"
    onError={[Function]}
    src="test.png"
  />
</div>
`;

exports[`Image Renders the UI snapshot correctly 7`] = `
<div
  className="css-0"
>
  <img
    alt=""
    className="css-0"
    onError={[Function]}
    src="test.png"
  />
</div>
`;

exports[`Image Renders the UI snapshot correctly 8`] = `
<div
  className="css-0"
>
  <img
    alt=""
    className="css-0"
    onError={[Function]}
    src="test.png"
  />
</div>
`;

exports[`Image Renders the UI snapshot correctly 9`] = `
<div
  className="css-0"
>
  <img
    alt=""
    className="css-0"
    onError={[Function]}
    src="test.png"
  />
</div>
`;

exports[`Image Renders the UI snapshot correctly 10`] = `
<div
  className="css-0"
>
  <img
    alt=""
    className="css-0"
    onError={[Function]}
    src="test.png"
  />
</div>
`;

exports[`Image Renders the UI snapshot correctly 11`] = `
<div
  className="css-0"
>
  <div
    className="the-wrap css-6n2uy8"
  >
    <div
      className="the-crop css-0"
    >
      <img
        alt=""
        className="css-0"
        onError={[Function]}
        src="test.png"
      />
    </div>
  </div>
</div>
`;

exports[`Image Renders the UI snapshot correctly 12`] = `
<div
  className="css-0"
>
  <div
    className="the-wrap css-fp4s7x"
  >
    <div
      className="the-crop css-0"
    >
      <img
        alt=""
        className="css-0"
        onError={[Function]}
        src="test.png"
      />
    </div>
  </div>
</div>
`;

exports[`Image Renders the UI snapshot correctly 13`] = `
<div
  className="css-0"
>
  <img
    alt=""
    className="css-0"
    onError={[Function]}
    src="test.png"
  />
</div>
`;

exports[`Image Renders the UI snapshot correctly 14`] = `
<div
  className="css-0"
>
  <div
    className="the-wrap css-5r8zvy"
  >
    <div
      className="the-crop css-0"
    >
      <img
        alt=""
        className="css-0"
        onError={[Function]}
        src="test.png"
      />
    </div>
  </div>
</div>
`;

exports[`Image Renders the UI snapshot correctly 15`] = `
<div
  className="css-0"
>
  <div
    className="the-wrap css-12nxalf"
  >
    <div
      className="the-crop css-0"
    >
      <img
        alt=""
        className="css-0"
        onError={[Function]}
        src="test.png"
      />
    </div>
  </div>
</div>
`;

exports[`Image Renders the UI snapshot correctly 16`] = `
<div
  className="css-0"
>
  <div
    className="the-wrap css-1atfqya"
  >
    <div
      className="the-crop css-0"
    >
      <img
        alt=""
        className="css-0"
        onError={[Function]}
        src="test.png"
      />
    </div>
  </div>
</div>
`;

exports[`Image Renders the UI snapshot correctly 17`] = `
<div
  className="css-0"
>
  <div
    className="the-wrap css-vy443d"
  >
    <div
      className="the-crop css-0"
    >
      <img
        alt=""
        className="css-0"
        onError={[Function]}
        src="test.png"
      />
    </div>
  </div>
</div>
`;

exports[`Image Renders the UI snapshot correctly 18`] = `
<div
  className="css-0"
>
  <div
    className="the-wrap css-3hzznc"
  >
    <div
      className="the-crop css-0"
    >
      <img
        alt=""
        className="css-0"
        onError={[Function]}
        src="test.png"
      />
    </div>
  </div>
</div>
`;

exports[`Image Renders the UI snapshot correctly 19`] = `
<div
  className="css-0"
>
  <div
    className="the-wrap css-12nxalf"
  >
    <div
      className="the-crop css-0"
    >
      <img
        alt=""
        className="css-0"
        onError={[Function]}
        src="test.png"
      />
    </div>
  </div>
</div>
`;

exports[`Image Renders the UI snapshot correctly 20`] = `
<div
  className="css-0"
>
  <img
    alt=""
    className="css-qvgr6z"
    onError={[Function]}
    src="test.png"
  />
</div>
`;

exports[`Image Renders the UI snapshot correctly 21`] = `
<div
  className="css-0"
>
  <img
    alt=""
    className="css-0"
    data-testid="image"
    onError={[Function]}
    src="test.png"
  />
</div>
`;
